# siigo-connector

./: prerelease.sh  pyproject.toml
.github/workflows/: release-pypi.yml  release-testpypi.yml
deploy/: README.md  local_prerelease.sh  prerelease.sh  release.sh
src/siigo_connector/: _http.py  auth.py  client.py  config.py  errors.py
src/siigo_connector/resources/: customers.py  webhooks.py
tests/: README.md  __init__.py  conftest.py  test_auth.py  test_client.py  test_config.py  test_customers_models.py  test_customers_resource.py  test_errors.py  test_http.py  test_integration.py
