[project]
name = "siigo-connector"
version = "0.1.0"
description = ""
authors = [{ name = "Alejandro E. Rendon", email = "alejandro@rendon.co" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email]>=2.11.7,<3.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "ruff>=0.12.11,<0.13",
    "mypy>=1.17.1,<2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["siigo-connector"]


[tool.hatch.build.targets.sdist]
include = ["src/siigo_connector"]

[tool.hatch.build.targets.wheel]
include = ["src/siigo_connector"]

[tool.hatch.build.targets.wheel.sources]
"src/siigo_connector" = "siigo_connector"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
