[project]
name = "siigo_connector"
version = "0.1.4rc7"
description = "Python client for the Siigo API"
license = { text = "MIT" }
authors = [{ name = "Alejandro E. Rendon", email = "arendondiosa@gmail.com" }]
requires-python = ">=3.9"
readme = "README.md"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic[email]>=2.11.7,<3.0.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1,<9",
    "ruff>=0.12.11,<0.13",
    "mypy>=1.17.1,<2",
    "black>=25.1.0",
    "isort>=6.0.1",
    "pre-commit>=4.3.0",
]

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 120
known_first_party = ["siigo_connector"]


[tool.hatch.build.targets.sdist]
include = ["src/siigo_connector"]

[tool.hatch.build.targets.wheel]
include = ["src/siigo_connector"]

[tool.hatch.build.targets.wheel.sources]
"src/siigo_connector" = "siigo_connector"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
